@@ -17,10 +17,10 @@ AC_PROG_CXX
 
 dnl CFLAGS=" -Wall -s -O3"
 dnl CXXFLAGS=" -Wall -s -O3"
-CFLAGS=" -g -Wall"
-CXXFLAGS=" -g -Wall"
-dnl CFLAGS=" -Wall -pg"
-dnl CXXFLAGS=" -Wall -pg"
+dnl CFLAGS=" -g -Wall"
+dnl CXXFLAGS=" -g -Wall"
+CFLAGS=" -Wall -pg"
+CXXFLAGS=" -Wall -pg"
 
 dnl Checks for programs.
 AC_PROG_CC
